--- a/index.html
+++ b/index.html
@@ -1,134 +1,121 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>JTR</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>JTR</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-        <!--stylesheets-->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-
-        <!-- Web Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Raleway:700,400,300' rel='stylesheet' type='text/css'>
+    <!--stylesheets-->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
 
 
-    </head>
+  </head>
 
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+  <body>
+      <!--[if lt IE 8]>
+          <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <![endif]-->
 
-        <!-- content -->
+      <!-- content -->
 
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">I once touched a network. It hurt, a lot.</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-            <!-- form stuff
-              <form class="navbar-form navbar-right">
-                <div class="form-group">
-                  <input type="text" placeholder="Email" class="form-control">
-                </div>
-                <div class="form-group">
-                  <input type="password" placeholder="Password" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
-              </form>
-              -->
-            </div><!--/.navbar-collapse -->
+    <nav class="navbar">
+
+    </nav>
+
+    <div class="page-container">
+      <!-- Main jumbotron-->
+      <div class="superheader centered">
+        <div class='container'>
+          <h1>It's me, JTR</h1>
+        </div>
+        <div class="container">
+          <p>This is a little web page about me. How's it going? You don't have to answer.</p>
+        </div>
+      </div>
+
+      <div class= "container group block-one">
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            This is Content Heading
           </div>
-        </nav>
+          <div class="panel-body">
+            This is where some good content goes.
+          </div>
+        </div>
+      </div>
 
-        <!-- Main jumbotron-->
-        <div class="jumbotron">
-          <div class="container">
-            <h1>It's me, JTR</h1>
-            <p>This is a little web page about me. How's it going? You don't have to answer.</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button" id="quincy">I would like to know more. &raquo;</a></p>
+      <div class='generic container btn'>
+       <a class="button large" href="#" role="button" id="extend-btn">I would like to know more. &raquo;</a>
+      </div>
+
+      <div id= "extended-content">
+
+        <!--Extra Content here? -->
+        <div class= "container group block-one">
+
+          <div class="panel panel-default">
+            <div class="panel-heading">There would be content here
+
+            </div>
+            <div class="panel-body">
+                But there is none at the moment
+
+
+            </div>
           </div>
         </div>
 
-            <div id= "quincy-content">
-
-                <!-- Content here? -->
-                <div class= "container section clearfix block-one">
-
-                <div class="panel panel-default">
-                        <div class="panel-heading">There would be content here</div>
-
-                        <div class="panel-body">
-                        But there is none at the moment
+      <div class="space"></div>
 
 
-                        </div>
+        <div class="container">
 
-                     </div>
-                </div>
+        </div>
 
-                <div class="space"></div>
+       <div class="space">
+
+       </div>
 
 
-                  <div class="container">
+      </div>
+      <div class="container">
+        <div class="well well-lg">
+          <p>Send me a message: <a href="mailto:riddick.taylor@gmail.com?Subject=Well%20Hello%20There" target="_top">Riddick.Taylor@gmail.com</a></p>
+        </div>
+      </div>
+      <hr>
 
-                  </div>
+    </div>
 
-                 <div class="space">
-
-                 </div>
-
-                 <div class="container">
-                    <div class="well well-lg">
-
-                      <p>Send me a message: <a href="mailto:riddick.taylor@gmail.com?Subject=Well%20Hello%20There" target="_top">Riddick.Taylor@gmail.com</a></p>
-                    </div>
-                 </div>
-            </div>
-          </div>
-          <hr>
-
-          <footer>
-            <p>&copy; 2016 JT Riddick.</p>
-          </footer>
+    <footer>
+      <p>&copy; 2016 JT Riddick.</p>
+    </footer>
 
 
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='https://www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    </script>
+  </body>
 </html>
