added collapsing full width header

--- a/index.html
+++ b/index.html
@@ -26,20 +26,21 @@
 
       <!-- content -->
 
-    <nav class="navbar">
 
-    </nav>
 
-    <div class="page-container">
+    <main class="page-container">
+      <nav class="navbar">
+
+      </nav>
       <!-- Main jumbotron-->
-      <div class="superheader centered">
+      <header class="superheader super-fill centered blueprint-grid">
         <div class='container'>
-          <h1>It's me, JTR</h1>
+          <h1>Jordan Taylor Riddick</h1>
         </div>
         <div class="container">
-          <p>This is a little web page about me. How's it going? You don't have to answer.</p>
+          <p><span>This is a little web page about me. How's it going? You don't have to answer.</span></p>
         </div>
-      </div>
+      </header>
 
       <div class= "container group block-one">
 
@@ -92,9 +93,8 @@
           <p>Send me a message: <a href="mailto:riddick.taylor@gmail.com?Subject=Well%20Hello%20There" target="_top">Riddick.Taylor@gmail.com</a></p>
         </div>
       </div>
+    </main>
       <hr>
-
-    </div>
 
     <footer>
       <p>&copy; 2016 JT Riddick.</p>
