--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         </div>
       </div>
 
-      <div class='generic container btn'>
+      <!-- <div class='generic container btn'>
        <a class="button large" href="#" role="button" id="extend-btn">I would like to know more. &raquo;</a>
-      </div>
+      </div> -->
 
       <div id= "extended-content">
 
@@ -69,8 +69,6 @@
             </div>
             <div class="panel-body">
                 But there is none at the moment
-
-
             </div>
           </div>
         </div>
@@ -97,7 +95,7 @@
       <hr>
 
     <footer>
-      <p>&copy; 2016 JT Riddick.</p>
+      <p>&copy; 2017 Jordan T Riddick.</p>
     </footer>
 
 
