--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
         <div class="container">
           <p><span>This is a little web page about me. How's it going? You don't have to answer.</span></p>
         </div>
+        <div class="container">
+          <i class="fa fa-chevron-circle-down fa-5x" style="z-index:999;"></i>
+        </div>
       </header>
 
-      <div class= "container group block-one">
+      <section class= "container group block-one">
 
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -52,7 +55,30 @@
             This is where some good content goes.
           </div>
         </div>
-      </div>
+      </section>
+      <section class= "container group block-two">
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            This is Content Heading
+          </div>
+          <div class="panel-body">
+            This is where some good content goes.
+          </div>
+        </div>
+      </section>
+      <section class= "container group block-three">
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            This is Content Heading
+          </div>
+          <div class="panel-body">
+            This is where some good content goes.
+          </div>
+        </div>
+      </section>
+
 
       <!-- <div class='generic container btn'>
        <a class="button large" href="#" role="button" id="extend-btn">I would like to know more. &raquo;</a>
@@ -105,6 +131,7 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
+    <script src="https://use.fontawesome.com/23909fdb43.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
