--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
   </head>
 
   <body>
-      <!--[if lt IE 8]>
+      <!--[if lt IE 8]>x
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
 
       <!-- content -->
-
 
 
     <main class="page-container">
@@ -41,18 +40,20 @@
           <p><span>This is a little web page about me. How's it going? You don't have to answer.</span></p>
         </div>
         <div class="container">
-          <i class="fa fa-chevron-circle-down fa-5x" style="z-index:999;"></i>
+          <i class="fa fa-chevron-circle-down fa-5x"></i>
         </div>
       </header>
 
-      <section class= "container group block-one">
+      <section class= "container group block-one"  style="z-index:1;">
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            This is Content Heading
+            <h2>This is Content Heading</h2>
           </div>
           <div class="panel-body">
-            This is where some good content goes.
+            <p>
+              This is where some content will go.
+            </p>
           </div>
         </div>
       </section>
@@ -60,10 +61,12 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            This is Content Heading
+            <h2>This is Content Heading</h2>
           </div>
           <div class="panel-body">
-            This is where some good content goes.
+            <p>
+              This is where some content will go.
+            </p>
           </div>
         </div>
       </section>
@@ -71,10 +74,12 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            This is Content Heading
+            <h2>This is Content Heading</h2>
           </div>
           <div class="panel-body">
-            This is where some good content goes.
+            <p>
+              This is where some content will go.
+            </p>
           </div>
         </div>
       </section>
