tried jquery responsive header, new styling

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </header>
 
-      <section class= "container group block-one"  style="z-index:1;">
+      <section class= "container group block block-one"  style="z-index:1;">
 
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -57,7 +57,7 @@
           </div>
         </div>
       </section>
-      <section class= "container group block-two">
+      <section class= "container group block block-two">
 
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -70,7 +70,7 @@
           </div>
         </div>
       </section>
-      <section class= "container group block-three">
+      <section class= "container group block block-three">
 
         <div class="panel panel-default">
           <div class="panel-heading">
