--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
           <h1>Jordan Taylor Riddick</h1>
         </div>
         <div class="container">
-          <p><span>This is a little web page about me. How's it going? You don't have to answer.</span></p>
+          <p><span>This is a little web page about me.</span></p>
+          <p><span>How's it going?</span></p>
+          <p><span>You don't have to answer.</span></p>
         </div>
         <div class="container">
           <i class="fa fa-chevron-circle-down fa-5x"></i>
