added portfolio section basics

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
           <p><span>You don't have to answer.</span></p>
         </div>
         <div class="container">
+
           <i class="fa fa-chevron-circle-down fa-5x"></i>
+
         </div>
       </header>
 
@@ -50,11 +52,14 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h2>This is Content Heading</h2>
+            <h2>Thing Doer</h2>
           </div>
           <div class="panel-body">
             <p>
-              This is where some content will go.
+              I'm Taylor. I like making interactive web zones with Node, Express, and React. It's pretty great so far.
+            </p>
+            <p>
+              The best thing about JavaScript is how it plumps when you cook it, like a hot dog.
             </p>
           </div>
         </div>
@@ -63,12 +68,40 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h2>This is Content Heading</h2>
+            <h2>Important things</h2>
           </div>
           <div class="panel-body">
             <p>
               This is where some content will go.
             </p>
+            <div class="portfolio-list">
+              <ul>
+                <li>
+                  <div class="portfolio-item archilocator">
+                    <div class="portfolio-content">
+
+                    </div>
+                  </div>
+
+                </li>
+                <li class="portfolio-item">
+                  <div class="portfolio-content">
+
+                  </div>
+                </li>
+                <li class="portfolio-item">
+                  <div class="portfolio-content">
+
+                  </div>
+                </li>
+                <li class="portfolio-item">
+                  <div class="portfolio-content">
+
+                  </div>
+                </li>
+
+              </ul>
+            </div>
           </div>
         </div>
       </section>
@@ -121,6 +154,10 @@
       </div>
       <div class="container">
         <div class="well well-lg">
+          <a href="http://github.com/JTRiddick" target="_blank"><i class="fa fa-linkedin fa-4x"></i></a>
+          <a href="https://www.linkedin.com/in/jtriddick/" target="_blank"><i class="fa fa-github fa-4x"></i></a>
+        </div>
+        <div class="well">
           <p>Send me a message: <a href="mailto:riddick.taylor@gmail.com?Subject=Well%20Hello%20There" target="_top">Riddick.Taylor@gmail.com</a></p>
         </div>
       </div>
