improved list item behavior

--- a/index.html
+++ b/index.html
@@ -76,27 +76,26 @@
             </p>
             <div class="portfolio-list">
               <ul>
+
                 <li>
                   <div class="portfolio-item archilocator">
                     <div class="portfolio-content">
 
                     </div>
                   </div>
-
                 </li>
-                <li class="portfolio-item">
-                  <div class="portfolio-content">
+                <li>
+                  <div class="portfolio-item archilocator">
+                    <div class="portfolio-content">
 
+                    </div>
                   </div>
                 </li>
-                <li class="portfolio-item">
-                  <div class="portfolio-content">
+                <li>
+                  <div class="portfolio-item archilocator">
+                    <div class="portfolio-content">
 
-                  </div>
-                </li>
-                <li class="portfolio-item">
-                  <div class="portfolio-content">
-
+                    </div>
                   </div>
                 </li>
 
