blocked out placeholder portfolio entries

--- a/index.html
+++ b/index.html
@@ -84,20 +84,22 @@
                     </div>
                   </div>
                 </li>
-                <li>
-                  <div class="portfolio-item archilocator">
+
+                <!-- <li>
+                  <div class="portfolio-item two">
                     <div class="portfolio-content">
 
                     </div>
                   </div>
                 </li>
+
                 <li>
-                  <div class="portfolio-item archilocator">
+                  <div class="portfolio-item three">
                     <div class="portfolio-content">
 
                     </div>
                   </div>
-                </li>
+                </li> -->
 
               </ul>
             </div>
