tweaked new header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h1>Jordan Taylor Riddick</h1>
         </div>
         <div class="container">
-          <p><span>This is a little web page about me.</span></p>
+          <h2>UI/UX . Front-End Dev</h2>
           <p><span>How's it going?</span></p>
           <p><span>You don't have to answer.</span></p>
         </div>
@@ -52,11 +52,16 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h2>Thing Doer</h2>
+            <h2>Hi</h2>
+            <h2>I'm Taylor Riddick</h2>
+            <h2>And I'm Fun as Goshing F.U.C.K</h2>
           </div>
           <div class="panel-body">
             <p>
-              I'm Taylor. I like making interactive web zones with Node, Express, and React. It's pretty great so far.
+
+            </p>
+            <p>
+              I like making interactive web zones with Node, Express, and React. It's pretty great so far.
             </p>
             <p>
               The best thing about JavaScript is how it plumps when you cook it, like a hot dog.
