some text legibility changes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="panel-body">
             <p>
-              This is where some content will go.
+              <!--  -->
             </p>
             <div class="portfolio-list">
               <ul>
@@ -163,7 +163,7 @@
           <a href="http://github.com/JTRiddick" target="_blank"><i class="fa fa-linkedin fa-4x"></i></a>
           <a href="https://www.linkedin.com/in/jtriddick/" target="_blank"><i class="fa fa-github fa-4x"></i></a>
         </div>
-        <div class="well">
+        <div class="well contact">
           <p>Send me a message: <a href="mailto:riddick.taylor@gmail.com?Subject=Well%20Hello%20There" target="_top">Riddick.Taylor@gmail.com</a></p>
         </div>
       </div>
