added a cute little CSS modal for portfolio

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <li>
                   <div class="portfolio-item archilocator">
                     <div class="portfolio-content">
-
+                      <a href="#openModal">Archilocator</a>
                     </div>
                   </div>
                 </li>
@@ -106,7 +106,21 @@
                   </div>
                 </li> -->
 
+                <!-- Portfolio Items -->
               </ul>
+
+              <div id="openModal" class="modalDialog">
+                <div class="">
+                  <a href="#close" title="Close" class="close">X</a>
+                  <h3>ArchiLocator</h3>
+                  <img src="./img/al-screencap-1.jpg" style="max-width:100%"/>
+                  <p>
+                    A Web App for Finding Architecture of Interest
+                  </p>
+                </div>
+              </div>
+              <!-- Modal Boxes -->
+
             </div>
           </div>
         </div>
