--- a/index.html
+++ b/index.html
@@ -90,36 +90,18 @@
                   </div>
                 </li>
 
-                <!-- <li>
-                  <div class="portfolio-item two">
+                <li>
+                  <div class="portfolio-item good-taste">
                     <div class="portfolio-content">
-
+                      <a href="#openModal2">I Never Said It Was a Good Taste</a>
                     </div>
                   </div>
                 </li>
 
-                <li>
-                  <div class="portfolio-item three">
-                    <div class="portfolio-content">
-
-                    </div>
-                  </div>
-                </li> -->
 
                 <!-- Portfolio Items -->
               </ul>
 
-              <div id="openModal" class="modalDialog">
-                <div class="">
-                  <a href="#close" title="Close" class="close">X</a>
-                  <h3>ArchiLocator</h3>
-                  <img src="./img/al-screencap-1.jpg" style="max-width:100%"/>
-                  <p>
-                    A Web App for Finding Architecture of Interest
-                  </p>
-                </div>
-              </div>
-              <!-- Modal Boxes -->
 
             </div>
           </div>
@@ -139,6 +121,29 @@
         </div>
       </section>
 
+
+      <div id="openModal" class="modalDialog">
+        <div class="">
+          <a href="#close" title="Close" class="close">X</a>
+          <h3>ArchiLocator</h3>
+          <img src="./img/al-screencap-1.jpg" style="max-width:100%"/>
+          <p>
+            A Web App for Finding Architecture of Interest
+          </p>
+        </div>
+      </div>
+
+      <div id="openModal2" class="modalDialog">
+        <div class="">
+          <a href="#close" title="Close" class="close">X</a>
+          <h3>I Never Said it Was a Good Taste</h3>
+          <img src="./img/blu-boomerang-1.png" style="max-width:100%"/>
+          <p>
+            Unity Engine Game team project built for 72 Hour Ludum Dare Game Jam.
+          </p>
+        </div>
+      </div>
+      <!-- Modal Boxes -->
 
       <!-- <div class='generic container btn'>
        <a class="button large" href="#" role="button" id="extend-btn">I would like to know more. &raquo;</a>
