--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h2>Hi</h2>
-            <h2>I'm Taylor Riddick</h2>
-            <h2>And I'm Fun as Goshing F.U.C.K</h2>
+            <h2>But Who This?</h2>
           </div>
           <div class="panel-body">
             <p>
