--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
                   </div>
                 </li>
 
+                <li>
+                  <div class="portfolio-item wages-of-space">
+                    <div class="portfolio-content">
+                      <a href="#openModal3">The Wages of Space</a>
+                    </div>
+                  </div>
+                </li>
+
 
                 <!-- Portfolio Items -->
               </ul>
@@ -137,7 +145,18 @@
           <h3>I Never Said it Was a Good Taste</h3>
           <img src="./img/blu-boomerang-1.png" style="max-width:100%"/>
           <p>
-            Unity Engine Game team project built for 72 Hour Ludum Dare Game Jam.
+            Team project built for 72 Hour Ludum Dare Game Jam.
+          </p>
+        </div>
+      </div>
+
+      <div id="openModal3" class="modalDialog">
+        <div class="">
+          <a href="#close" title="Close" class="close">X</a>
+          <h3>The Wages of Space</h3>
+          <img src="./img/wages-of-space-1.png" style="max-width:100%"/>
+          <p>
+            Unity Engine Game with primitive physics.
           </p>
         </div>
       </div>
