tweaked color scheme

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <div class="panel-heading">
             <h2>But Who This?</h2>
           </div>
-          <div class="panel-body">
+          <div class="panel-body centered">
             <p>
-
+              I bring a... "unique" perspective to developing user interfaces, responsive sites, apps, and games
             </p>
             <p>
               I like making interactive web zones with Node, Express, and React. It's pretty great so far.
