added portfolio item for craig schumacher

--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
                   </div>
                 </li>
 
+                <li>
+                  <div class="portfolio-item craig-schumacher">
+                    <div class="portfolio-content">
+                      <a href="#openModal4">Craig Schumacher</a>
+                    </div>
+                  </div>
+                </li>
+
 
                 <!-- Portfolio Items -->
               </ul>
@@ -191,6 +199,17 @@
         <img src="./img/wages-of-space-1.png" style="max-width:100%"/>
         <p>
           Unity Engine Game with primitive physics.
+        </p>
+      </div>
+    </div>
+
+    <div id="openModal4" class="modalDialog">
+      <div class="">
+        <a href="#close" title="Close" class="close">X</a>
+        <h3>Craig Schumacher</h3>
+        <img src="./img/craig-site-2.png" style="max-width:100%"/>
+        <p>
+          Portfolio Website for a Dallas based artist with bootstrap and isotope
         </p>
       </div>
     </div>
