copy and styling changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>JTR</title>
-    <meta name="description" content="">
+    <meta name="description" content="The portfolio website of Jordan Taylor Riddick">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -91,7 +91,7 @@
                 <li>
                   <div class="portfolio-item good-taste">
                     <div class="portfolio-content">
-                      <a href="#openModal2">I Never Said It Was a Good Taste</a>
+                      <a href="#openModal2">Ludum Dare 33</a>
                     </div>
                   </div>
                 </li>
@@ -171,46 +171,50 @@
 
 
     <div id="openModal" class="modalDialog">
-      <div class="">
+      <div class="modal-content">
         <a href="#close" title="Close" class="close">X</a>
         <h3>ArchiLocator</h3>
-        <img src="./img/al-screencap-1.jpg" style="max-width:100%"/>
+        <img src="./img/al-screencap-1.jpg">
         <p>
-          A Web App for Finding Architecture of Interest
+          A Web App for Finding Architecture of Interest. Built on an
         </p>
       </div>
     </div>
 
     <div id="openModal2" class="modalDialog">
-      <div class="">
+      <div class="modal-content">
         <a href="#close" title="Close" class="close">X</a>
         <h3>I Never Said it Was a Good Taste</h3>
-        <img src="./img/blu-boomerang-1.png" style="max-width:100%"/>
+        <img src="./img/blu-boomerang-1.png"/>
         <p>
-          Team project built for 72 Hour Ludum Dare Game Jam.
+          Team project built for 72 Hour Ludum Dare Game Jam. Featured A* pathfinding and unique stealth gameplay based on the movie 'The Thing'
         </p>
       </div>
     </div>
 
     <div id="openModal3" class="modalDialog">
-      <div class="">
+      <div class="model-content">
         <a href="#close" title="Close" class="close">X</a>
         <h3>The Wages of Space</h3>
-        <img src="./img/wages-of-space-1.png" style="max-width:100%"/>
+        <img src="./img/wages-of-space-1.png"/>
         <p>
-          Unity Engine Game with primitive physics.
+          Unity Engine Game with primitive physics. Based on the 1970s arcade classic, 'Lunar Lander'.
         </p>
       </div>
     </div>
 
     <div id="openModal4" class="modalDialog">
-      <div class="">
+      <div class="modal-content">
         <a href="#close" title="Close" class="close">X</a>
         <h3>Craig Schumacher</h3>
-        <img src="./img/craig-site-2.png" style="max-width:100%"/>
+        <img src="./img/craig-site-2.png" />
         <p>
-          Portfolio Website for a Dallas based artist with bootstrap and isotope
+          Portfolio Website for a Dallas based artist with bootstrap and isotope.
+          <a href="http://www.craigschumacher.com"><div class="button">
+            Visit Page
+          </div></a>
         </p>
+
       </div>
     </div>
 
