bugs fixed, text split

--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
         <h3>ArchiLocator</h3>
         <img src="./img/al-screencap-1.jpg">
         <p>
-          A Web App for Finding Architecture of Interest. Built on an
+          A Web App for Finding Architecture of Interest.
+        </p>
+        <p>
+          Built on Node, Express, React, and Mongo.
         </p>
       </div>
     </div>
@@ -187,18 +190,24 @@
         <h3>I Never Said it Was a Good Taste</h3>
         <img src="./img/blu-boomerang-1.png"/>
         <p>
-          Team project built for 72 Hour Ludum Dare Game Jam. Featured A* pathfinding and unique stealth gameplay based on the movie 'The Thing'
+          Team project built for 72 Hour Ludum Dare Game Jam.
+        </p>
+        <p>
+           Featured A* pathfinding and unique stealth gameplay based on John Carpenter's 'The Thing'
         </p>
       </div>
     </div>
 
     <div id="openModal3" class="modalDialog">
-      <div class="model-content">
+      <div class="modal-content">
         <a href="#close" title="Close" class="close">X</a>
         <h3>The Wages of Space</h3>
         <img src="./img/wages-of-space-1.png"/>
         <p>
-          Unity Engine Game with primitive physics. Based on the 1970s arcade classic, 'Lunar Lander'.
+          Unity Engine Game with primitive physics.
+        </p>
+        <p>
+          Based on the 1970s arcade classic, 'Lunar Lander'.
         </p>
       </div>
     </div>
