changed link behavior to portfolio item div

--- a/index.html
+++ b/index.html
@@ -82,36 +82,43 @@
 
                 <li>
                   <div class="portfolio-item archilocator">
-                    <div class="portfolio-content">
-                      <a href="#openModal">Archilocator</a>
-                    </div>
+                    <a href="#openModal">
+                      <div class="portfolio-content">
+                          <span>Archilocator</span>
+                      </div>
+                    </a>
                   </div>
                 </li>
 
                 <li>
                   <div class="portfolio-item good-taste">
-                    <div class="portfolio-content">
-                      <a href="#openModal2">Ludum Dare 33</a>
-                    </div>
+                    <a href="#openModal2">
+                      <div class="portfolio-content">
+                          <span>Ludum Dare 33</span>
+                      </div>
+                    </a>
                   </div>
                 </li>
 
                 <li>
                   <div class="portfolio-item wages-of-space">
-                    <div class="portfolio-content">
-                      <a href="#openModal3">The Wages of Space</a>
-                    </div>
+                    <a href="#openModal3">
+                      <div class="portfolio-content">
+                          <span>The Wages of Space</span>
+                      </div>
+                    </a>
                   </div>
                 </li>
 
                 <li>
                   <div class="portfolio-item craig-schumacher">
-                    <div class="portfolio-content">
-                      <a href="#openModal4">Craig Schumacher</a>
-                    </div>
+                    <a href="#openModal4">
+                      <div class="portfolio-content">
+                          <span>Craig Schumacher</span>
+                      </div>
+                    </a>
                   </div>
                 </li>
-
 
                 <!-- Portfolio Items -->
               </ul>
