added link to header arrow

--- a/index.html
+++ b/index.html
@@ -43,14 +43,16 @@
         </div>
         <div class="container">
 
-          <i class="fa fa-chevron-circle-down fa-5x"></i>
+          <a href="#who">
+              <i class="fa fa-chevron-circle-down fa-5x"></i>
+          </a>
 
         </div>
       </header>
 
       <section class= "container group block block-one"  style="z-index:1;">
 
-        <div class="panel panel-default">
+        <div class="panel panel-default" id="who">
           <div class="panel-heading">
             <h2>But Who This?</h2>
           </div>
