commented out empty section, fixed icons showing up on wrong links

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </div>
         </div>
       </section>
-      <section class= "container group block block-three">
+      <!-- <section class= "container group block block-three">
 
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -142,7 +142,7 @@
             </p>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Modal Boxes -->
 
@@ -168,8 +168,8 @@
       </div>
       <div class="container">
         <div class="well well-lg">
-          <a href="http://github.com/JTRiddick" target="_blank"><i class="fa fa-linkedin fa-4x"></i></a>
-          <a href="https://www.linkedin.com/in/jtriddick/" target="_blank"><i class="fa fa-github fa-4x"></i></a>
+          <a href="http://github.com/JTRiddick" target="_blank"><i class="fa fa-github fa-4x"></i></a>
+          <a href="https://www.linkedin.com/in/jtriddick/" target="_blank"><i class="fa fa-linkedin fa-4x"></i></a>
           <div class="well contact">
             <p>Send me a message: <a href="mailto:riddick.taylor@gmail.com?Subject=Well%20Hello%20There" target="_top">Riddick.Taylor@gmail.com</a></p>
           </div>
