added github links to projects with source control

--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
         <p>
           Built on Node, Express, React, and Mongo.
         </p>
+        <a href="https://github.com/JTRiddick/archiloc"><div class="button">
+          GitHub
+        </div></a>
       </div>
     </div>
 
@@ -204,6 +207,9 @@
         <p>
            Featured A* pathfinding and unique stealth gameplay based on John Carpenter's 'The Thing'
         </p>
+        <a href="https://github.com/JTRiddick/BlueBoomerang"><div class="button">
+          GitHub
+        </div></a>
       </div>
     </div>
 
