--- a/index.html
+++ b/index.html
@@ -130,19 +130,56 @@
           </div>
         </div>
       </section>
-      <!-- <section class= "container group block block-three">
+      <section class= "container group block block-three">
 
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h2>This is Content Heading</h2>
+            <h2>More About Me</h2>
           </div>
           <div class="panel-body">
-            <p>
-              This is where some content will go.
-            </p>
+            <div class="row">
+              <div class="col-third">
+                <h3>
+                  Skills
+                </h3>
+                <ul>
+                  <li>Javascript / ES6</li>
+                  <li>HMTL5 / CSS3</li>
+                  <li>SASS</li>
+                  <li>React</li>
+                  <li>JQuery</li>
+                  <li>Node</li>
+                  <li>Bootstrap</li>
+                  <li>Mongo</li>
+                </ul>
+              </div>
+              <div class="col-third">
+                <h3>
+                  Tools
+                </h3>
+                <ul>
+                  <li>git</li>
+                  <li>Webpack 2</li>
+                  <li>npm</li>
+                  <li>Unity</li>
+
+                </ul>
+              </div>
+              <div class="col-third">
+                <div id="contact">
+                  <div class="well well-lg">
+                    <a href="http://github.com/JTRiddick" target="_blank"><i class="fa fa-github fa-4x"></i></a>
+                    <a href="https://www.linkedin.com/in/jtriddick/" target="_blank"><i class="fa fa-linkedin fa-4x"></i></a>
+                    <div class="well contact">
+                      <p>Send me a message: <a href="mailto:riddick.taylor@gmail.com?Subject=Well%20Hello%20There" target="_top">Riddick.Taylor@gmail.com</a></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- Modal Boxes -->
 
@@ -164,20 +201,9 @@
             </div>
           </div>
         </div>
+      </div>
 
-      </div>
-      <div class="container">
-        <div class="well well-lg">
-          <a href="http://github.com/JTRiddick" target="_blank"><i class="fa fa-github fa-4x"></i></a>
-          <a href="https://www.linkedin.com/in/jtriddick/" target="_blank"><i class="fa fa-linkedin fa-4x"></i></a>
-          <div class="well contact">
-            <p>Send me a message: <a href="mailto:riddick.taylor@gmail.com?Subject=Well%20Hello%20There" target="_top">Riddick.Taylor@gmail.com</a></p>
-          </div>
-        </div>
-      </div>
     </main>
-      <hr>
-
 
     <div id="openModal" class="modalDialog">
       <div class="modal-content">
