--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>JTR</title>
+    <title>Jordan T Riddick</title>
     <meta name="description" content="The portfolio website of Jordan Taylor Riddick">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
